app/static/themes/v0/core.css
/* ... */
/*
Pink "art" in MPLSart.com header
.brand-title-art {
    color: #ff0099;
    text-transform: lowercase;
}
    .brand-title-art:before {
        content: ' ';
    }
*/

/* TEMPORARY: Top Rail Welcome Header */
#welcome-header-container { margin-bottom:20px; }
    h1#welcome-header {
    	background-color:#ff0099;
    	color:#fff;
    	text-align:center;
    	font-size:65px;
    }


/* Panel Defaults */
.panel-header { padding:5px; padding-left: 20px; }
.panel-content { background-color: #eee; /*padding:10px;*/ }

/* Events Panels */
.panel-events .panel-header {
    background-color:#222;
    color: #fff;
}
.panel-events .panel-content {
    /*padding:0px;*/
    background-color: transparent;
    padding-top:10px;
}
    .panel-events .panel-content .row { }

/* Call Out */
#panel-call-out { background-color: #ffffff; }
    #panel-call-out h2 {
        font-size:30px;
        line-height: 30px;
        background-color: #ff0099;
        color : #fff;
        /* padding:20px; */
    }
    #panel-call-out .panel-content { margin-bottom:20px; }
    #panel-call-out .bigyo { font-size:30px; }
        #panel-call-out .bigyo a { font-weight: bold; }


/* Blurb Text */
#panel-blurb {
    color:#313131;
    margin-bottom:20px;
    font-size:30px;
}
    #panel-blurb h2 { color:#313131; font-weight:bold; }
    #panel-blurb p { line-height: 1.25em; }



/* Closet announcement text */
#panel-closet {
    color:#313131;
    margin-bottom:20px;
    line-height: 1.25em;
}


/* Hashtag */
#panel-hashtag .row {  margin-left: 0px; background-color: #ff0099; }
#panel-hashtag .solid-white { padding:20px; background-color: #fff; }

#panel-hashtag .solid-bg {
    /* padding:20px; */
    height: 100%;
    color: #ffffff;
    font-size:30px;
    padding-top:30px;
    text-align:center;
}


/* Form Styles */
/*
form {
    padding-right:5px;
    padding-bottom:5px;
}
form button.btn-default { background-color: #0096BE; color:#fff; font-weight:bold; }
    form button.btn-default:hover { background-color: #2a6496; color:#fff; }

form #id_email::-webkit-input-placeholder { color: #cccccc; }
form #id_email:-moz-placeholder { color: #cccccc; }
form #id_email::-moz-placeholder { color: #cccccc; }
form #id_email:-ms-input-placeholder { color: #cccccc; }
*/

footer {
    padding:10px;
    margin-bottom:20px;
    font-size:12px;
    text-align:right;
}

/* Desktop */

@media screen and (min-width: 400px) {
    body {
        /* 
        padding-top: 75px;
        padding-bottom: 70px;
        */
    }
}

/* Mobile */
@media screen and (max-width: 500px) {
    body {
        /* padding-top: 55px; */
        /* padding-bottom: 15px; */
    }
    
    h1#welcome-header { font-size: 40px; }
}
@media (max-width:768px) {
    .navbar-header { float:left; }
    .navbar-right { float:right; }
}

#map-canvas {
    border: 1px solid green;
}

.map-large {
    height:500px;
    width:100%;
}

.map-small {
    height:200px;
    width:100%;
    border: 1px solid green;
}

.card {
    margin-bottom: 30px;
}

    .card .card-content {
      padding: 16px;
      background-color: #eee;
    }

        .card .card-title {
            font-weight:bold;
            line-height: 1.25em;
            padding-bottom: .5em;
        }

        .card .card-detail {
            font-color: #000;
        }

        .card.big-card .card-title {
            font-size:25px;
        }



/* Type specific overrides */
.card .card-detail.event-address, .card .card-detail.event-time { 
    line-height:1.5em;
}

.card .card-detail.event-venue-name {
    font-color: #000;    
    font-size:14px;
    line-height: 1.45em;
    padding-top:5px;
}

.card .card-detail.event-address {
    font-color: #000;    
    font-size:14px;
    line-height: 1.45em;
}

.card .card-detail.event-time {
    font-weight:bold;
    color:#313131;
    font-size:14px;
}

.card.big-card .card-detail.event-venue-name, .card.big-card .card-detail.event-time, .card.big-card .card-detail.event-address {
    font-size:18px;
}

.card .fundraiser-end-date {
    font-weight:bold;
    color:#313131;
    font-size:14px;
    padding-top:5px;
}


/* Nav Bar Card Bits */
#header_nav_cards { background-color: #222; box-shadow: 0 27px 40px #555; }
    #header_nav_cards .container {
        opacity: 0;
        height:0;
        overflow:hidden;
        transition: opacity .5s ease-in;
        transition: height .5s ease-in;
    }

	.show-nav #header_nav_cards .container {
        opacity: 1;
        transition: opacity .5s ease-in;
        transition: height .5s ease-in;
        height:60px;
        overflow:hidden;
    }

    /* Sidecard */
    .sidecard .card {
        margin-top: 0px;
        border-top:1px solid black;
    }
    .sidecard a {
        background:url(https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/10152433_10154107872845357_9126802419535311414_n.jpg?oh=1ff0dd0512ff5d89f45378c3108de5e9&oe=55166AF7&__gda__=1427244355_579859ab5a0384fddb8afc40e0313d47);
        background-size: cover;
        background-position-y: 33%;
        display: block;
        width: 100%;
        background-size: cover;
        background-position-y: 50%;
        z-index: 10;
        height: 40px;
    }
        .sidecard span {
            display:none;
        }

    #slider-thumbs, #slider-thumbs .row {
        /*
        margin-right : 0px;
        margin-left : 0px;
        */
    }
	
	/* #header_nav_cards .row .row .item, #slider-thumbs .row .item { */
	#header_nav_cards .row .item, #slider-thumbs .item {
		overflow: hidden;
		padding:0px;
		position:relative;
		border-left:1px solid white;
	}
	
    #header_nav_cards .row .item {
		border-left:1px solid black;
	}
	    .row-shim {
	        overflow: auto;
            border-top: 1px solid white;
            margin-right: 10px;
            margin-left: 9px;
	    }

	    #header_nav_cards .row-shim {
            margin-right: 0px;
            margin-left: -1px;
            border-top: 1px solid black;
	    }
/* ... */

